// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`initHTTPServer should close even with opened sockets when using DESTROY_SOCKETS 1`] = `
{
  "httpRouterCalls": [],
  "logCalls": [],
}
`;

exports[`initHTTPServer should proxy server close errors 1`] = `
{
  "errorCode": "E_ERROR",
  "errorDebugValues": [],
  "httpRouterCalls": [],
  "logCalls": [],
}
`;

exports[`initHTTPServer should proxy server fatal errors 1`] = `
{
  "errorCode": "E_HTTP_SERVER_ERROR",
  "errorDebugValues": [],
  "httpRouterCalls": [],
  "logCalls": [],
}
`;

exports[`initHTTPServer should serve the router 1`] = `
{
  "logCalls": [],
  "status": 200,
}
`;

exports[`initHTTPServer should work with instantly destroyed connections 1`] = `
{
  "httpRouterCalls": [],
  "logCalls": [],
}
`;

exports[`initHTTPServer should work with keepalive connections 1`] = `
{
  "httpRouterCalls": [],
  "logCalls": [
    [
      "warning",
      "🎙️ - HTTP Server listening at "http://localhost:7777".",
    ],
    [
      "debug",
      "✅ - Closing HTTP server.",
    ],
    [
      "debug",
      "✔️ - HTTP server closed!",
    ],
  ],
}
`;
